cmake_minimum_required(VERSION 3.8)
project(emcl_ros)

add_compile_options(-std=c++17 -O2 -g)

find_package(catkin REQUIRED COMPONENTS
  dynamic_reconfigure
  geometry_msgs
  nav_msgs
  pcl_ros
  roscpp
  sensor_msgs
  tf2
  tf2_ros
)

################################################
## Declare ROS dynamic reconfigure parameters ##
################################################

generate_dynamic_reconfigure_options(
  cfg/DynReconf.cfg
)

###################################
## catkin specific configuration ##
###################################
catkin_package()

###########
## Build ##
###########
include_directories(include ${catkin_INCLUDE_DIRS})

FILE(GLOB srcs "src/*.cpp")
FILE(GLOB utils "src/utils/*")
add_executable(emcl_node ${srcs} ${utils})
add_dependencies(emcl_node ${PROJECT_NAME}_gencfg)
target_link_libraries(emcl_node ${catkin_LIBRARIES})

#############
## Testing ##
#############
if(CATKIN_ENABLE_TESTING)
  find_package(rostest REQUIRED)
  find_package(roslint REQUIRED)
  roslint_cpp()
  roslint_add_test()
endif()
